# power-ml

./: .flake8  .gitignore  README.md  pyproject.toml
examples/ai/: example_predictor.py
examples/data/: example_local_pickle_store.py  example_s3_pickle_store.py
examples/power_ml/ai/: example_cv.py  example_metrics.py  example_model.py  example_permutation_importance.py  example_predictor.py
examples/power_ml/data/: example_local_pickle_store.py
examples/power_ml/platform/: example_project.py
examples/power_ml/stats/: example_col_info.py
examples/power_ml/util/: example_memory.py  example_version.py
examples/technic/: model_flow.py  parallel_ml.py  power_model.py
examples/util/: example_seed.py  example_timer.py
scripts/: report.bash
src/power_ml/: __init__.py
src/power_ml/ai/: __init__.py  metrics.py  model.py  permutation_importance.py  types.py
src/power_ml/ai/predictor/: __init__.py  base_predictor.py  light_gbm.py  sklearn_predictor.py
src/power_ml/ai/selection/: __init__.py  selector.py  split.py
src/power_ml/ai/validate/: cv_generator.py
src/power_ml/data/: local_pickle_store.py  s3_pickle_store.py  store.py
src/power_ml/platform/: catalog.py  model_flow.py  power_model.py  project.py
src/power_ml/stats/: col_info.py  col_stats.py
src/power_ml/util/: __init__.py  dict_util.py  fmt.py  memory.py  numeric.py  seed.py  timer.py  version.py
tests/power_ml/: test_init.py
tests/power_ml/util/: test_seed.py  test_version.py
